Get raw response headers using  URLRequest::SetResponseHeadersCallback()

DevTools used to get actual response headers with NetLogObserver. Once we
removed NetLogObserver, we started using URLRequest::response_headers().
However, it returns the original cached headers in case of revalidation
requests, which is not what DevTools expect.
This adds SetResponseHeadersCallback() similar to SetRequestHeadersCallback()
to resolve the issue.

Bug: 758090, 721408
Change-Id: I8d8a7a757601fe282a82b8a092148726cdab85e2